[tool.poetry]
name = "credit-score-ml-classifier"
version = "0.1.0"
description = ""
authors = ["Guilherme <guiemanoeloliveira@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.0"
numpy = "^1.26.4"
plotly = "^5.18.0"
scikit-learn = "^1.5.0"
ipykernel = "^6.29.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
